--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,4 +1,4 @@
-property.filepath = /Users/palmerlarson/IdeaProjects/WDevLogger
+property.filepath = /Users/palmerlarson/IdeaProjects/IndieProject/Logs
 appenders = console, file, hibernate
 
 appender.console.type = Console
@@ -16,8 +16,8 @@ appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} -
 ## It will delete log files if there are more than 5
 appender.hibernate.type = RollingFile
 appender.hibernate.name = HIBFILE
-appender.hibernate.fileName = ${filepath}/Week5ExerciseHibernate.log
-appender.hibernate.filePattern=${filepath}/Week5ExerciseHibernate_%d{yyyyMMdd HH:mm}.log
+appender.hibernate.fileName = ${filepath}/wdev.log
+appender.hibernate.filePattern=${filepath}/wdevhibernate%d{yyyyMMdd HH:mm}.log
 appender.hibernate.layout.type=PatternLayout
 appender.hibernate.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 appender.hibernate.policies.type = Policies
