--- a/src/main/resources/cognito.properties
+++ b/src/main/resources/cognito.properties
@@ -1,7 +1,7 @@
-client.secret=325pepf0pbgm85ntoorptioukkbapsmt9vmpqg81se59vhqobap
-client.id=41g4d07dstdnbaq1vj8kibl7l2
-oauthURL=https://ent-java-exercise-week-7-palmer.auth.us-east-2.amazoncognito.com/oauth2/token
-loginURL=https://ent-java-exercise-week-7-palmer.auth.us-east-2.amazoncognito.com/login
-redirectURL=http://localhost:8080/aws_cognito_exercise_war/auth
+client.secret=1gdfqo0jvhfd9ogjdoo81r2rgdovhlvuropvaj9bqr9pv0rad28p
+client.id=24p8k6rju9rjg2inpa8p64n4t4
+oauthURL=https://palmer-indie-project.auth.us-east-2.amazoncognito.com/oauth2/token
+loginURL=https://palmer-indie-project.auth.us-east-2.amazoncognito.com/login
+redirectURL=http://localhost:8080/IndieProject_war/auth
 region=us-east-2
-poolId=us-east-2_3wvSVU7Fl
+poolId=us-east-2_lE8UeTGTZ
