--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.10.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.7</version>
+    </dependency>
 
   </dependencies>
 
