--- a/src/main/resources/cognito.properties
+++ b/src/main/resources/cognito.properties
@@ -2,6 +2,7 @@ client.secret=1gdfqo0jvhfd9ogjdoo81r2rgdovhlvuropvaj9bqr9pv0rad28p
 client.id=24p8k6rju9rjg2inpa8p64n4t4
 oauthURL=https://palmer-indie-project.auth.us-east-2.amazoncognito.com/oauth2/token
 loginURL=https://palmer-indie-project.auth.us-east-2.amazoncognito.com/login
-redirectURL=http://localhost:8080/IndieProject_war/auth
+#redirectURL=http://localhost:8080/IndieProject_war/auth
+redirectURL=https://Indieproject-env.eba-rqviw5bv.us-east-2.elasticbeanstalk.com/auth
 region=us-east-2
 poolId=us-east-2_lE8UeTGTZ
