--- a/src/test/resources/database.properties
+++ b/src/test/resources/database.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/wdev?serverTimezone=America/Chicago
+url=jdbc:mysql://localhost:3306/wdev?serverTimezone=UTC
 username=root
 password=palmer1995
