--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,14 @@
 
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
   <display-name>Archetype Created Web Application</display-name>
+
+  <servlet>
+    <servlet-name>InfoPage</servlet-name>
+    <servlet-class>com.palmerlarson.controller.InfoPage</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>InfoPage</servlet-name>
+    <url-pattern>/infoPage</url-pattern>
+  </servlet-mapping>
 </web-app>
