--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,13 @@
       <version>1.7</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>1.5.3</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
