--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,5 +1,5 @@
 property.filepath = /Users/palmerlarson/IdeaProjects/IndieProject/Logs
-appenders = console, file, hibernate
+appender = console, file, hibernate
 
 appender.console.type = Console
 appender.console.name = STDOUT
@@ -33,18 +33,18 @@ appender.hibernate.strategy.delete.ifAccumulatedFileCount.exceeds = 5
 
 loggers=file, hibernate
 
-logger.file.name = edu.matc
+logger.file.name = com.palmerlarson
 logger.file.level = debug
 logger.file.appenderRefs = file
 logger.file.appenderRef.file.ref = LOGFILE
 #logger.file.additivity will prevent logging in the parent (root, which is console in this case)
-logger.file.additivity = false 
+logger.file.additivity = false
 
 logger.hibernate.name = org.hibernate
 logger.hibernate.level = debug
 logger.hibernate.appenderRefs = file
 logger.hibernate.appenderRef.file.ref = HIBFILE
-logger.hibernate.additivity = false 
+logger.hibernate.additivity = false
 
 
 rootLogger.level = error
