--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://aa9k253xu276jc.cg2el8onktgs.us-east-2.rds.amazonaws.com:3306/wdev?serverTimezone=UTC
+url=jdbc:mysql://aa9k253xu276jc.cg2el8onktgs.us-east-2.rds.amazonaws.com:3306/wdev
 username=root
 password=palmer1995
