--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 /target/
 /log/
 /lib/
+/Logs
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
@@ -47,3 +48,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# sensitive
+/src/main/resources/cognito.properties
+/src/main/resources/database.properties
+/src/main/resources/hibernate.cfg.xml
